@@ -22,11 +22,13 @@ import java.sql.Timestamp
 import org.apache.spark.rdd.RDD
 import org.apache.spark.sql.sources._
 import org.apache.spark.sql.types._
-import org.apache.spark.sql.{Row, SQLContext}
+import org.apache.spark.sql.{DataFrame, Row, SQLContext, SaveMode}
 import org.kududb.Type
 import org.kududb.annotations.InterfaceStability
-import org.kududb.client.{KuduPredicate, KuduTable}
+import org.kududb.client._
 import org.kududb.client.KuduPredicate.ComparisonOp
+import org.kududb.client.SessionConfiguration.FlushMode
+import org.apache.spark.sql.SaveMode._
 
 import scala.collection.JavaConverters._
 
@@ -35,7 +37,7 @@ import scala.collection.JavaConverters._
   * This class will produce a relationProvider based on input given to it from spark.
   */
 @InterfaceStability.Unstable
-class DefaultSource extends RelationProvider {
+class DefaultSource extends RelationProvider with CreatableRelationProvider {
 
   val TABLE_KEY = "kudu.table"
   val KUDU_MASTER = "kudu.master"
@@ -50,14 +52,42 @@ class DefaultSource extends RelationProvider {
   override def createRelation(sqlContext: SQLContext,
                               parameters: Map[String, String]):
   BaseRelation = {
-    val tableName = parameters.get(TABLE_KEY)
-    if (tableName.isEmpty) {
-      throw new IllegalArgumentException(s"Invalid value for $TABLE_KEY '$tableName'")
-    }
+    val tableName = parameters.getOrElse(TABLE_KEY,
+      throw new IllegalArgumentException(s"Kudu table name must be specified in create options " +
+        s"using key '$TABLE_KEY'"))
+    val kuduMaster = parameters.getOrElse(KUDU_MASTER, "localhost")
+
+    new KuduRelation(tableName, kuduMaster)(sqlContext)
+  }
+
+  /**
+    * Creates a relation and inserts data to specified table.
+    *
+    * @param sqlContext
+    * @param mode Append will not overwrite existing data, Overwrite will perform update, but will
+    *             not insert data, use upsert on KuduContext if you require both
+    * @param parameters Nessisary parameters for kudu.table and kudu.master
+    * @param data Dataframe to save into kudu
+    * @return returns populated base relation
+    */
+  override def createRelation(sqlContext: SQLContext, mode: SaveMode,
+                              parameters: Map[String, String], data: DataFrame): BaseRelation = {
+    val tableName = parameters.getOrElse(TABLE_KEY,
+      throw new IllegalArgumentException(s"Kudu table name must be specified in create options " +
+        s"using key '$TABLE_KEY'"))
 
     val kuduMaster = parameters.getOrElse(KUDU_MASTER, "localhost")
 
-    new KuduRelation(tableName.get, kuduMaster)(sqlContext)
+    val kuduRelation = new KuduRelation(tableName, kuduMaster)(sqlContext)
+    mode match {
+      case Append | Ignore => kuduRelation.insert(data, overwrite = false)
+      case Overwrite => kuduRelation.insert(data, overwrite = true)
+      case ErrorIfExists =>
+          throw new UnsupportedOperationException(
+            "ErrorIfExists is currently not supported")
+    }
+
+    kuduRelation
   }
 }
 
@@ -73,7 +103,9 @@ class KuduRelation(private val tableName: String,
                    private val kuduMaster: String)(
                    val sqlContext: SQLContext)
 extends BaseRelation
-with PrunedFilteredScan {
+with PrunedFilteredScan
+with InsertableRelation {
+
   import KuduRelation._
 
   private val context: KuduContext = new KuduContext(kuduMaster)
@@ -103,12 +135,12 @@ with PrunedFilteredScan {
     *
     * @param requiredColumns columns that are being requested by the requesting query
     * @param filters         filters that are being applied by the requesting query
-    * @return                RDD will all the results from Kudu
+    * @return RDD will all the results from Kudu
     */
   override def buildScan(requiredColumns: Array[String], filters: Array[Filter]): RDD[Row] = {
     val predicates = filters.flatMap(filterToPredicate)
-    new KuduRDD(kuduMaster, 1024*1024*20, requiredColumns, predicates,
-                table, context, sqlContext.sparkContext)
+    new KuduRDD(kuduMaster, 1024 * 1024 * 20, requiredColumns, predicates,
+      table, context, sqlContext.sparkContext)
   }
 
   /**
@@ -158,6 +190,15 @@ with PrunedFilteredScan {
       case value: String => KuduPredicate.newComparisonPredicate(columnSchema, operator, value)
       case value: Array[Byte] => KuduPredicate.newComparisonPredicate(columnSchema, operator, value)
     }
+  }
+
+  /**
+    * Inserts data into an existing Kudu table.
+    * @param data [[DataFrame]] to be inserted into Kudu
+    * @param overwrite If True it will update existing records, but will not perform inserts.
+    */
+  override def insert(data: DataFrame, overwrite: Boolean): Unit = {
+    context.writeRows(data, tableName, overwrite)
   }
 }
 
