@@ -23,8 +23,10 @@ import java.util.TimeZone
 import org.apache.spark.sql.SQLContext
 import org.junit.Assert._
 import org.junit.runner.RunWith
+import org.kududb.client.CreateTableOptions
 import org.scalatest.{BeforeAndAfter, FunSuite}
 import org.scalatest.junit.JUnitRunner
+import org.apache.spark.sql.functions._
 
 import scala.collection.immutable.IndexedSeq
 
@@ -53,15 +55,106 @@ class DefaultSourceTest extends FunSuite with TestContext with BeforeAndAfter {
   val rowCount = 10
   var sqlContext : SQLContext = _
   var rows : IndexedSeq[(Int, Int, String)] = _
+  var kuduOptions : Map[String, String] = _
+
   before {
     val rowCount = 10
     rows = insertRows(rowCount)
 
     sqlContext = new SQLContext(sc)
 
-    sqlContext.read.options(
-      Map("kudu.table" -> tableName, "kudu.master" -> miniCluster.getMasterAddresses)).kudu
+    kuduOptions = Map(
+      "kudu.table" -> tableName,
+      "kudu.master" -> miniCluster.getMasterAddresses)
+
+    sqlContext.read.options(kuduOptions).kudu
       .registerTempTable(tableName)
+  }
+
+  test("table creation") {
+    if(kuduContext.tableExists("testcreatetable")) {
+      kuduContext.deleteTable("testcreatetable")
+    }
+
+    val df = sqlContext.read.options(kuduOptions).kudu
+
+    kuduContext.createTable("testcreatetable", df.schema, Seq("key"), new CreateTableOptions().setNumReplicas(1))
+
+    // now use new options to refer to the new table name
+    val newOptions: Map[String, String] = Map(
+      "kudu.table" -> "testcreatetable",
+      "kudu.master" -> miniCluster.getMasterAddresses)
+
+    df.write.options(newOptions).mode("append").kudu
+
+    val checkDf = sqlContext.read.options(newOptions).kudu
+
+    assert(checkDf.schema === df.schema)
+
+    assertTrue(kuduContext.tableExists("testcreatetable"))
+    assert(checkDf.count == 10)
+    kuduContext.deleteTable("testcreatetable")
+
+    assertFalse(kuduContext.tableExists("testcreatetable"))
+  }
+
+  test("insertion") {
+    val df = sqlContext.read.options(      kuduOptions).kudu
+    val changedDF = df.limit(1).withColumn("key", df("key").plus(100)).withColumn("c2_s", lit("abc"))
+    changedDF.show
+    changedDF.write.options(kuduOptions).mode("append").kudu
+
+    val newDF = sqlContext.read.options(kuduOptions).kudu
+    newDF.show
+    val collected = newDF.filter("key = 100").collect()
+    assertEquals("abc", collected(0).getAs[String]("c2_s"))
+
+    deleteRow(100)
+  }
+
+  test("insertion multiple") {
+    val df = sqlContext.read.options(kuduOptions).kudu
+    val changedDF = df.limit(2).withColumn("key", df("key").plus(100)).withColumn("c2_s", lit("abc"))
+    changedDF.show
+    changedDF.write.options(kuduOptions).mode("append").kudu
+
+    val newDF = sqlContext.read.options(kuduOptions).kudu
+    newDF.show
+    val collected = newDF.filter("key = 100").collect()
+    assertEquals("abc", collected(0).getAs[String]("c2_s"))
+
+    val collectedTwo = newDF.filter("key = 101").collect()
+    assertEquals("abc", collectedTwo(0).getAs[String]("c2_s"))
+
+    deleteRow(100)
+    deleteRow(101)
+  }
+
+  test("update row") {
+    val df = sqlContext.read.options(kuduOptions).kudu
+    val baseDF = df.limit(1) // filter down to just the first row
+    baseDF.show
+    // change the c2 string to abc and update
+    val changedDF = baseDF.withColumn("c2_s", lit("abc"))
+    changedDF.show
+    changedDF.write.options(kuduOptions).mode("overwrite").kudu
+
+    //read the data back
+    val newDF = sqlContext.read.options(kuduOptions).kudu
+    newDF.show
+    val collected = newDF.filter("key = 0").collect()
+    assertEquals("abc", collected(0).getAs[String]("c2_s"))
+
+    //rewrite the original value
+    baseDF.withColumn("c2_s", lit("0")).write.options(kuduOptions)
+      .mode("overwrite").kudu
+  }
+
+  test("out of order selection") {
+    val df = sqlContext.read.options(kuduOptions).kudu.select( "c2_s", "c1_i", "key")
+    val collected = df.collect()
+    assert(collected(0).getString(0).equals("0"))
+
   }
 
   test("table scan") {
